# internal-ai-knowledge-assistant

./: .gitignore  README.md  ROADMAP.md  STATUS.md  pyproject.toml
data/processed/: 20251021_152404_2. Embeddings & vector stores.pdf.txt  20251021_182101_3. Agents2.pdf.txt  20251022_124300_4. Solving Domain-Specific problems using LLMs.pdf.txt  20251022_124938_5. Operationalizing Generative AI on Vertex AI.pdf.txt
data/vectors/iaka_index/: index.faiss  index.pkl
src/: main.py
src/ingestion/: google_drive_router.py  local_folder_router.py  upload_router.py
src/parsing/: parser_service.py
src/rag/: retriever_service.py
src/ui/: app.py
src/vectorstore/: vector_service.py
