[project]
name = "iaka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.119.1",
    "google-api-python-client>=2.186.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.3",
    "gradio>=3.36.1",
    "langchain>=1.0.1",
    "langchain-community>=0.4",
    "langchain-google-genai>=3.0.0",
    "langchain-googledrive>=0.3.35",
    "langchain-huggingface>=1.0.0",
    "langgraph>=1.0.1",
    "pymupdf>=1.26.5",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
    "unstructured[all-docs,xlsx]>=0.18.15",
    "uvicorn>=0.38.0",
    "watchdog>=6.0.0",
]
